fix(dashboard): dashboard and layout issue fixed

--- a/typescript-version/full-version/src/@core/scss/template/_utilities.scss
+++ b/typescript-version/full-version/src/@core/scss/template/_utilities.scss
@@ -32,7 +32,7 @@
 
     .app-timeline-text {
       color: rgba(var(--v-theme-on-surface), var(--v-medium-emphasis-opacity));
-      font-size: 15px;
+      font-size: .9375rem;
       line-height: 1.375rem;
     }
   }
