--- a/typescript-version/full-version/src/@core/scss/template/_vertical-nav.scss
+++ b/typescript-version/full-version/src/@core/scss/template/_vertical-nav.scss
@@ -44,3 +44,8 @@
     }
   }
 }
+
+//  👉 Overlay 
+.layout-overlay{
+  touch-action: none;
+}
